plugins/kotlin-dataframe/testData/diagnostics/materializedSchemaOnProperty.kt
// RENDER_DIAGNOSTIC_ARGUMENTS

import org.jetbrains.kotlinx.dataframe.*
import org.jetbrains.kotlinx.dataframe.annotations.*
import org.jetbrains.kotlinx.dataframe.api.*
import org.jetbrains.kotlinx.dataframe.io.*

class Context {
    private val <!DATAFRAME_PLUGIN_NOT_YET_SUPPORTED_IN_PROPERTY_RETURN_TYPE("@DataSchemadata class Df(    val a: Int,)")!>df<!> = dataFrameOf("a" to columnOf(1))
}
